--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:name="com.exinnos.popularmovies.fragments.MoviesFragment"
         />
 
     <FrameLayout
