--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -11,39 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp">
+        android:paddingBottom="@dimen/movie_details_layout_padding_bottom"
+        android:paddingLeft="@dimen/movie_details_layout_padding_left"
+        android:paddingRight="@dimen/movie_details_layout_padding_right"
+        android:paddingTop="@dimen/movie_details_layout_padding_top">
 
         <TextView
             android:id="@+id/movie_title_textview"
+            style="@style/AppTheme.TitleTextview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textColor"
-            android:textSize="28sp" />
+            android:layout_height="wrap_content" />
 
 
         <TextView
             android:id="@+id/release_date_textview"
+            style="@style/AppTheme.SubTitleTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/movie_title_textview"
             android:layout_below="@id/movie_title_textview"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:id="@+id/rating_textview"
+            style="@style/AppTheme.SubTitleTextview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/movie_title_textview"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:layout_marginTop="10dp" />
     </RelativeLayout>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -61,21 +58,18 @@
                 android:id="@+id/movie_poster_imageview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/rating_textview"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10dp"
-                android:background="@android:color/darker_gray"
-                android:elevation="5dp" />
+                android:layout_marginTop="@dimen/movie_poster_imageview_margin_top"
+                android:background="@android:color/darker_gray" />
 
             <TextView
                 android:id="@+id/overview_textview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="left"
-                android:padding="20dp"
-                android:textAlignment="gravity"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                android:gravity="start"
+                android:padding="@dimen/overview_textview_padding"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/overview_textview_textsize" />
 
         </LinearLayout>
     </ScrollView>
