--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,14 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.TitleTextview" parent="@android:style/Widget.Holo.TextView">
+        <item name="android:textSize">@dimen/movie_title_textview_size</item>
+        <item name="android:textColor">@color/titleTextColor</item>
+    </style>
+
+    <style name="AppTheme.SubTitleTextview" parent="@android:style/Widget.Holo.TextView">
+        <item name="android:textSize">@dimen/movie_sub_title_textview_size</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
 </resources>
