--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.exinnos.popularmovies.fragments.MovieDetailFragment">
 
@@ -46,6 +47,14 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp" />
     </RelativeLayout>
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/movie_detail_tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/movie_details_viewpager"
