--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="colorPrimaryDark">#D32F2F</color>
     <color name="colorAccent">#D32F2F</color>
     <color name="titleTextColor">@android:color/white</color>
+    <color name="movie_selection_color">#98a1d5fa</color>
 </resources>
