--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -18,6 +18,18 @@
         android:id="@+id/framelayout_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2" />
+        android:layout_weight="2">
+
+        <TextView
+            android:id="@+id/no_movie_selected_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No movie selected"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="@dimen/movie_title_textview_size"
+            android:layout_gravity="center"
+            />
+
+    </FrameLayout>
 
 </LinearLayout>
