--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     tools:context="com.exinnos.popularmovies.fragments.MovieDetailFragment">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/no_movie_selected_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:textColor="@android:color/holo_red_dark"
         android:textSize="@dimen/movie_title_textview_size"
         android:layout_gravity="center"
-        />
+        />-->
 
     <LinearLayout
         android:id="@+id/movie_details_top_layout"
