--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -14,13 +14,13 @@
     android:adjustViewBounds="true"
     android:scaleType="centerCrop" />
 
-    <!--<ImageView
+    <ImageView
         android:id="@+id/movie_poster_selection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/movie_selection_color"
         android:layout_gravity="center"
         android:visibility="gone"
-        />-->
+        />
 
 </android.support.v7.widget.CardView>
