--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -24,11 +24,10 @@
             android:id="@+id/no_movie_selected_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="No movie selected"
             android:textColor="@android:color/holo_red_dark"
-            android:textSize="@dimen/movie_title_textview_size"
-            android:layout_gravity="center"
-            />
+            android:textSize="@dimen/movie_title_textview_size" />
 
     </FrameLayout>
 
