--- a/app/src/main/res/layout-sw600dp/movie_grid_item.xml
+++ b/app/src/main/res/layout-sw600dp/movie_grid_item.xml
@@ -8,19 +8,18 @@
     card_view:elevation="4dp">
 
     <ImageView
-    android:id="@+id/movie_poster"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:adjustViewBounds="true"
-    android:scaleType="centerCrop" />
+        android:id="@+id/movie_poster"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:id="@+id/movie_poster_selection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/movie_selection_color"
         android:layout_gravity="center"
-        android:visibility="gone"
-        />
+        android:background="@color/movie_selection_color"
+        android:visibility="gone" />
 
 </android.support.v7.widget.CardView>
