--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@android:color/background_light"
+    android:orientation="vertical"
     tools:context="com.exinnos.popularmovies.fragments.MovieDetailFragment">
 
     <!--<TextView
@@ -23,88 +23,86 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/movie_details_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:paddingBottom="@dimen/movie_details_layout_padding_bottom"
-        android:paddingLeft="@dimen/movie_details_layout_padding_left"
-        android:paddingRight="@dimen/movie_details_layout_padding_right"
-        android:paddingTop="@dimen/movie_details_layout_padding_top">
+        <RelativeLayout
+            android:id="@+id/movie_details_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:paddingBottom="@dimen/movie_details_layout_padding_bottom"
+            android:paddingLeft="@dimen/movie_details_layout_padding_left"
+            android:paddingRight="@dimen/movie_details_layout_padding_right"
+            android:paddingTop="@dimen/movie_details_layout_padding_top">
 
-        <TextView
-            android:id="@+id/movie_title_textview"
-            style="@style/AppTheme.TitleTextview"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/movie_title_textview"
+                style="@style/AppTheme.TitleTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
+                android:id="@+id/release_date_textview"
+                style="@style/AppTheme.SubTitleTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/movie_title_textview"
+                android:layout_below="@id/movie_title_textview"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/rating_textview"
+                style="@style/AppTheme.SubTitleTextview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/movie_title_textview"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" />
+        </RelativeLayout>
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/movie_detail_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/movie_details_viewpager"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
 
-        <TextView
-            android:id="@+id/release_date_textview"
-            style="@style/AppTheme.SubTitleTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/movie_title_textview"
-            android:layout_below="@id/movie_title_textview"
-            android:layout_marginTop="10dp" />
-
-        <TextView
-            android:id="@+id/rating_textview"
-            style="@style/AppTheme.SubTitleTextview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/movie_title_textview"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp" />
-    </RelativeLayout>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/movie_detail_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill"
-        />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/movie_details_viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-
-    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.exinnos.popularmovies.fragments.MovieDetailFragment">
-
-        <LinearLayout
+        <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            tools:context="com.exinnos.popularmovies.fragments.MovieDetailFragment">
 
-            <ImageView
-                android:id="@+id/movie_poster_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/movie_poster_imageview_margin_top"
-                android:background="@android:color/darker_gray" />
-
-            <TextView
-                android:id="@+id/overview_textview"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="@dimen/overview_textview_padding"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="@dimen/overview_textview_textsize" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-        </LinearLayout>
-    </ScrollView>-->
+                <ImageView
+                    android:id="@+id/movie_poster_imageview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/movie_poster_imageview_margin_top"
+                    android:background="@android:color/darker_gray" />
+
+                <TextView
+                    android:id="@+id/overview_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:padding="@dimen/overview_textview_padding"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="@dimen/overview_textview_textsize" />
+
+            </LinearLayout>
+        </ScrollView>-->
 
     </LinearLayout>
 
@@ -112,12 +110,11 @@
         android:id="@+id/favorite_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_favorite_border_white_24dp"
         android:layout_gravity="bottom|right"
-        android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:tag="not_favorite"
-        />
+        android:layout_marginRight="20dp"
+        android:src="@drawable/ic_favorite_border_white_24dp"
+        android:tag="not_favorite" />
 
 
 </FrameLayout>
