--- a/app/src/main/res/layout/fragment_movie_summary.xml
+++ b/app/src/main/res/layout/fragment_movie_summary.xml
@@ -1,32 +1,31 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.exinnos.popularmovies.fragments.MovieSummaryFragment">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.exinnos.popularmovies.fragments.MovieSummaryFragment">
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/movie_poster_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/movie_poster_imageview_margin_top"
+            android:minHeight="150dp"
+            android:minWidth="100dp" />
+
+        <TextView
+            android:id="@+id/overview_textview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:lineSpacingExtra="2dp"
+            android:padding="@dimen/overview_textview_padding"
+            android:textSize="@dimen/overview_textview_textsize" />
 
-            <ImageView
-                android:id="@+id/movie_poster_imageview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="150dp"
-                android:minWidth="100dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/movie_poster_imageview_margin_top"
-                 />
-
-            <TextView
-                android:id="@+id/overview_textview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:padding="@dimen/overview_textview_padding"
-                android:textSize="@dimen/overview_textview_textsize"
-                android:lineSpacingExtra="2dp"/>
-
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+</ScrollView>
