--- a/app/src/main/res/layout/movie_trailer_item.xml
+++ b/app/src/main/res/layout/movie_trailer_item.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    >
+    android:orientation="horizontal"
+    android:padding="20dp">
 
     <ImageView
         android:id="@+id/play_imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_play_circle_outline_black_48dp"
         android:layout_gravity="center_vertical"
-        />
+        android:src="@drawable/ic_play_circle_outline_black_48dp" />
 
     <TextView
         android:id="@+id/trailer_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
-        />
+        android:textSize="14sp" />
 
 </LinearLayout>
